# arrwDB

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLEANUP_PLAN.md  Dockerfile  Dockerfile.singlestage  INSTALLATION.md  Procfile  README.md  README_V2.md  RUST_CONVERSION_SUMMARY.md  V2_DEVELOPMENT_CONTEXT.md  VALIDATION_SUMMARY.md  coverage.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  gunicorn_conf.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_api.py  test_ivf_integration.py  test_streaming_manual.sh
app/: config.py  logging_config.py
app/api/: adaptive_reranking_routes.py  dependencies.py  embedding_health_routes.py  event_routes.py  health.py  hybrid_fusion_routes.py  index_oracle_routes.py  job_routes.py  main.py  metrics.py  models.py  query_expansion_routes.py  search_replay_routes.py  streaming.py  streaming.py.backup  streaming_fixed.py  temperature_search_routes.py  vector_clustering_routes.py  vector_drift_routes.py  webhook_routes.py  websocket_routes.py
app/auth/: __init__.py  api_keys.py  audit.py  middleware.py  permissions.py
app/events/: __init__.py  bus.py
app/jobs/: __init__.py  handlers.py  queue.py
app/middleware/: __init__.py  security.py
app/models/: base.py
app/services/: __init__.py  embedding_service.py  hybrid_search.py  library_service.py
app/utils/: quantization.py
app/webhooks/: __init__.py  manager.py  models.py
app/websockets/: __init__.py  manager.py
benchmarks/indexes/: benchmark.py  benchmark_brute_force.py  benchmark_kd_tree.py  benchmark_lsh.py
core/: adaptive_reranking.py  embedding_contract.py  embedding_health.py  exceptions.py  hybrid_fusion.py  index_oracle.py  query_expansion.py  rust_vector_store_wrapper.py  search_replay.py  temperature_search.py  vector_clustering.py  vector_drift.py  vector_store.py
docs/: API_VERSIONING_STRATEGY.md  CLAIMS_VALIDATION_SUMMARY.md  CODE_QUALITY_ASSESSMENT.md  CODE_UNIQUENESS_ANALYSIS.md  COMPETITIVE_ANALYSIS_2025.md  DOCKER_BUILD_VALIDATION.md  DOCKER_DEPLOYMENT.md  EVENT_BUS_GUIDE.md  FINAL_IMPLEMENTATION_PLAN.md  FUTURE_ENHANCEMENTS.md  HIRING_REVIEW.md  IMPLEMENTATION_PROGRESS.md  INDUSTRY_COMPARISON_AND_IMPROVEMENTS.md  LEADER_FOLLOWER_DESIGN.md  NDJSON_STREAMING_FIX_SUMMARY.md  NOVEL_FEATURES.md  PERFORMANCE_BENCHMARKS.md  PERFORMANCE_VALIDATION_REPORT.md  PERSISTENCE_IMPLEMENTATION.md  PROJECT_ORGANIZATION.md  QUANTIZATION_DESIGN.md  README.md  README_UPDATE_SUMMARY.md  README_V1.md  REAL_VS_MOCKED.md  REMAINING_TASKS.md  REQUIREMENTS_VERIFICATION.md  SCALING_TO_BILLIONS_ROADMAP.md  SECURITY_CODE_QUALITY_ANALYSIS.md  SECURITY_ENHANCEMENTS_ROADMAP.md  SESSION_SUMMARY.md  SESSION_SUMMARY_SECURITY_ENHANCEMENTS.md  STREAMING_REALTIME_COMPLETE.md  STREAMING_WEBSOCKET_GUIDE.md  SYSTEM_DIAGRAMS.md  TEST_COVERAGE_ROADMAP.md  TEST_COVERAGE_SUMMARY.md  VALIDATION_COMPLETE_SUMMARY.md  VALIDATION_SUMMARY.md  implementation_analysis.md  (+4 more)
docs/archive/: CLEANUP_SUMMARY.md  CODE_REVIEW_2025-10-21.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_TEST_ANALYSIS.md  FINAL_SUMMARY.md  INSTALLATION_OPTIONS.md  README.md  REMAINING_COVERAGE_ANALYSIS.md  TESTING_COMPLETE.md  TEST_COVERAGE_PROGRESS_REPORT.md  TEST_RESULTS_FINAL.md  gpt5_review_response.md  improvement_tasks.md
docs/competitive/: COMPETITIVE_GAPS_ANALYSIS.md
docs/completed/: CLEANUP_COMPLETED.md  EVENT_PUBLISHING_FIXED.md  PHASE3_WEBSOCKET_COMPLETE.md  PHASE4_JOB_QUEUE_COMPLETE.md  PHASES_1_2_FINAL_STATUS.md  PYTHON_V2_COMPLETE.md  STREAMING_REALTIME_PHASE1_2_COMPLETE.md
docs/deployment/: HTTPS_TLS_SETUP.md  SECRETS_MANAGEMENT.md
docs/development/: CLEANUP_PLAN.md  PRE_COMMIT_HOOKS.md  README_V2.md  STREAMING_REALTIME_DESIGN.md  V2_DEVELOPMENT_CONTEXT.md
docs/guides/: CLI_EXAMPLES.md  INDEX.md  INSTALLATION.md  INSTALLATION_OPTIONS.md  METADATA_FILTERING.md  QUICKSTART.md
docs/planning/: FINAL_PLAN1.md  (+1 more)
rust/: Cargo.toml
rust/indexes/: Cargo.toml  README.md
rust/indexes/src/: brute_force.rs  distance.rs  kd_tree.rs  lsh.rs  node.rs
rust/snapshot/: Cargo.toml
rust/snapshot/src/: lib.rs
rust/vector_store/: Cargo.toml  benchmark_vector_store.py
rust/vector_store/src/: lib.rs
rust/wal/: Cargo.toml  benchmark_wal.py
rust/wal/src/: lib.rs
rust_hnsw/: README.md
rust_vector_store/: README.md
scripts/: README.md  clone-lightweight.sh  performance_demo.py  quick_flex.py  test_basic_functionality.py  validate_100k.py  validate_100k_final.py  validate_100k_simple.py  validate_performance.py  validate_submission.sh
sdk/: README.md  __init__.py  client.py
temporal/: __init__.py  activities.py  client.py  worker.py  workflows.py
tests/: conftest.py  test_advanced_queries.py  test_edge_cases.py  test_multi_tenancy.py  test_phase1_2_validation.py  test_quick_validation.sh  test_streaming.py
(+94 files in other folders)
