[workspace]
members = [
    "indexes",
    "vector_store",
    "wal",
    "snapshot",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

# Shared dependencies across all crates
[workspace.dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py39"] }
numpy = "0.21"
rayon = "1.10"
rand = "0.8"
uuid = { version = "1.10", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"

# Shared release profile
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
