[package]
name = "rust_vector_store"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_vector_store"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py39"] }
numpy = "0.21"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
